--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@changesets/cli": "2.20.0"
   },
   "description": "A simple SyncExternalStore for use with useSyncExternalStore",
-  "version": "0.0.0",
+  "version": "1.0.0-next.0",
   "dependencies": {},
   "repository": {
     "type": "git",
